AWS ACCOUNT ID IN PLACE OF AWS ACCOUNT ID

--- a/modules/rosa-sts-creating-a-cluster-with-customizations-cli.adoc
+++ b/modules/rosa-sts-creating-a-cluster-with-customizations-cli.adoc
@@ -149,7 +149,7 @@ $ aws kms get-key-policy --key-id <key_id_or_arn> --policy-name default --output
                     "arn:aws:iam::<aws-account-id>:role/ManagedOpenShift-Installer-Role",
                     "arn:aws:iam::<aws-account-id>:role/ManagedOpenShift-Worker-Role",
                     "arn:aws:iam::<aws-account-id>:role/ManagedOpenShift-ControlPlane-Role",
-                    "arn:aws:iam::<aws_account_id>:role/<cluster_name>-xxxx-openshift-cluster-csi-drivers-ebs-cloud-credent" <2>
+                    "arn:aws:iam::<aws-account-id>:role/<cluster_name>-xxxx-openshift-cluster-csi-drivers-ebs-cloud-credent" <2>
                 ]
             },
             "Action": [
@@ -170,7 +170,7 @@ $ aws kms get-key-policy --key-id <key_id_or_arn> --policy-name default --output
                     "arn:aws:iam::<aws-account-id>:role/ManagedOpenShift-Installer-Role",
                     "arn:aws:iam::<aws-account-id>:role/ManagedOpenShift-Worker-Role",
                     "arn:aws:iam::<aws-account-id>:role/ManagedOpenShift-ControlPlane-Role",
-                    "arn:aws:iam::<aws_account_id>:role/<cluster_name>-xxxx-openshift-cluster-csi-drivers-ebs-cloud-credent" <2>
+                    "arn:aws:iam::<aws-account-id>:role/<cluster_name>-xxxx-openshift-cluster-csi-drivers-ebs-cloud-credent" <2>
                 ]
             },
             "Action": [
